--- a/Blog.html
+++ b/Blog.html
@@ -4,8 +4,15 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title></title>
+	<link rel="stylesheet" href="style.css">
 </head>
 <body>
+		<nav class="navbar">
+	<a href="index.html">Register</a>
+	<a href="Login.html">Login</a>
+	<a href="Blog.html">Biography</a>
+	<a href="#">Photos</a>
+	</nav>
 	<table border="1px"cellpadding="10px"cellspacing="10px">
 		<tr>
 			<th>Name</th>
